# pyMeOS

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
controllers/: __init__.py  automation.py  competition.py  competition_controller.py  draw.py  result.py  result_calculator.py  speaker.py
formats/: __init__.py  csv_parser.py  iof30.py  xml_parser.py
hardware/: __init__.py  si_card.py  si_protocol.py  si_reader.py
models/: __init__.py  base.py  card.py  class_.py  club.py  control.py  course.py  enums.py  event.py  punch.py  runner.py  team.py
network/: __init__.py  rest_server.py
persistence/: __init__.py  database.py  event_repo.py  orm_models.py
resources/styles/: default.qss
resources/translations/: en.json
tests/: conftest.py
tests/test_controllers/: test_competition.py  test_draw.py  test_result_calculator.py  test_speaker.py
tests/test_hardware/: test_si_card.py  test_si_reader.py
tests/test_io/: test_csv_parser.py  test_iof30.py  test_rest_server.py  test_xml_parser.py
tests/test_models/: test_card.py  test_event.py  test_localizer.py  test_models_persistence.py  test_runner.py  test_time_utils.py
tests/test_views/: test_main_window.py
utils/: __init__.py  localizer.py  time_utils.py
views/: main_window.py
views/tabs/: __init__.py  tab_auto.py  tab_base.py  tab_class.py  tab_club.py  tab_competition.py  tab_control.py  tab_course.py  tab_results.py  tab_runner.py  tab_si.py  tab_speaker.py  tab_team.py
