[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "pymeos"
version         = "5.0.0"
description     = "Cross-platform orienteering event management (Python/PySide6 port of MeOS)"
readme          = "README.md"
license         = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"

authors = [
  {name = "PyMeOS Contributors"},
]

dependencies = [
  "PySide6>=6.7.0",
  "SQLAlchemy>=2.0.0",
  "alembic>=1.13.0",
  "pyserial>=3.5",
  "lxml>=5.0.0",
  "flask>=3.0.0",
  "flask-cors>=4.0.0",
  "requests>=2.31.0",
  "numpy>=1.26.0",
  "babel>=2.14.0",
  "python-dateutil>=2.9.0",
  "appdirs>=1.4.4",
]

[project.optional-dependencies]
mysql = ["PyMySQL>=1.1.0"]
dev   = [
  "pytest>=8.0.0",
  "pytest-qt>=4.4.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.12.0",
]

[project.scripts]
pymeos = "main:main"

[tool.setuptools.packages.find]
where   = ["."]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "--tb=short -q"
qt_qapp_args = ["--platform", "offscreen"]

[tool.coverage.run]
source  = ["."]
omit    = ["tests/*", "*/migrations/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
